tdf#116841 RTF import: fix default value of left para margin from numbering

The left mragin value is usually spelled out in RTF and DOCX, but this
bugdoc used the WW6 RTF markup to declare the numbering rules and there
the margin value was missing.

This also allows me to partially revert the changes to testTdf106953
from commit 56a695fddb915bcba13b088b5b2b4e0841d4acbc (tdf#112211 RTF
import: fix unwanted direct formatting for left indents, 2017-09-26).

(cherry picked from commit 810364653b8e5ef8578ae7c9fc2e3b9196e7cdc4)

Conflicts:
	sw/qa/extras/rtfexport/rtfexport3.cxx

Change-Id: I9902f2f9ada4080cb4d873624ae9824342c6ee77